--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">المدونة</a>
-            <a href="{{ site.baseurl }}/about">من أنا</a>
+            <a href="{{ site.baseurl }}/about">حول نقش</a>
           </nav>
         </header>
       </div>
