--- a/_layouts/postD3.html
+++ b/_layouts/postD3.html
@@ -6,7 +6,7 @@ layout: default
   <h1>{{ page.title }}</h1>
 
   <div class="entry">
-    {{ content }}
+    <script.src="https://github.com/pmplewa/D3Charts/blob/master/clt/chart.js"></script>
   </div>
 
   <div class="date">
