--- a/_layouts/postD3.html
+++ b/_layouts/postD3.html
@@ -8,7 +8,9 @@ layout: default
   <div class="entry">
    {{ content }}
   </div>
-<script>
+  
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<script type="text/javascript"> 
 const d3 = Object.assign({},
   require("d3-selection"),
   require("d3-scale"),
