--- a/_layouts/postD3.html
+++ b/_layouts/postD3.html
@@ -9,8 +9,10 @@ layout: default
    {{ content }}
   </div>
   
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script type="text/javascript"> 
+<script src="https://d3js.org/d3.v3.min.js"></script>
+
+<script>
+  
 const d3 = Object.assign({},
   require("d3-selection"),
   require("d3-scale"),
@@ -239,6 +241,7 @@ export function create(el, props) {
 export function destroy() {
   if (typeof timer !== "undefined") timer.stop();
 }
+  
 </script>
 
   <div class="date">
